--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     volumes:
       - .:/workspace
     ports:
-      - ${WEB_EXPOSE_1}:8000
-      - ${WEB_EXPOSE_2}:9000
+      - ${LMS_PORT}:8000
+      - ${SOCKETIO_PORT}:9000
 
 volumes:
   mariadb-data:
